<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prolific Library</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="seed">Seed</string>
    <string name="title_activity_add_book">AddBookActivity</string>
    <string name="booktitle">Book Title</string>
    <string name="author">Author</string>
    <string name="publisher">Publisher</string>
    <string name="categories">Categories</string>
    <string name="submit">Submit</string>
    <string name="leave_with_unsaved">Leave with unsaved changes?</string>
    <string name="no_network">No network connection!</string>
    <string name="detail">Detail</string>
    <string name="action_done">Done</string>
    <string name="all_required">All fields are required!</string>
    <string name="ok">OK</string>
    <string name="leave_unsaved_changes">Leave with unsaved changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_book_detail">BookDetailActivity</string>
    <string name="check_out">Checkout</string>
    <string name="tags_detail">Tags:&#160;</string>
    <string name="publisher_detail">Publisher:&#160;</string>
    <string name="checkedout_detail">Last Checked Out By:</string>
    <string name="checkout_name">Your Name</string>
    <string name="enter_name">Please enter your name</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="viewingbook">I am viewing the book:&#160;</string>
    <string name="by">&#160;by&#160;</string>
    <string name="fail">Fail to seed the database!</string>
    <string name="success">Success</string>
    <string name="addbooksucess">One book added</string>
    <string name="addbookfail">Fail to add one book!</string>
    <string name="checkoutfail">Fail to check out the book!</string>
    <string name="nobook">No book to display!</string>
</resources>
